updated html link

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>Ranya</li>
-        <li>Is</li>
-        <li>Good</li>
+    <h1>Ranya's Biography
+        <h3>About Me</h3>    
+            <p>My name is Ranya Abedelmalik. I am a junior at Shortridge High School. I participate in many activities around school such as Student Government and the Volleyball team. I started an Arabic Club at my school as well as co-founded an Amnesty International Club. </li>
+        <h3>My Journey</h3>
+            <p>This website is about me and my high school journey. My favorite subjects have been math and econ, I want to study business in college. I want to eventually attend the Wharton School of Upenn, which is a school with a very low acceptance rate.  </li>
+        <h3> My Accomplishments</h3>
+            <p>I recently got accepted onto the Mayors Youth Leadership Council which I am very proud of, I am happy to be representing the youth of our district. I believe that the students should have a say in what happens because we are the ones mostly being influenced by all of the decisions made and such. It is important for the impowered youth so speak up against injustice.  </li>
 
-        
-    </ul>
-</body>
-</html>
+        <a href="https://github.com/RanyaAbedelmalik"
+           title="">Ranya's GitHub</a>.
+        </p>
