--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
         <h3>About Me</h3>    
             <p>My name is Ranya Abedelmalik. I am a junior at Shortridge High School. I participate in many activities around school such as Student Government and the Volleyball team. I started an Arabic Club at my school as well as co-founded an Amnesty International Club. </li>
         <h3>My Journey</h3>
-            <p>This website is about me and my high school journey. My favorite subjects have been math and econ, I want to study business in college. I want to eventually attend the Wharton School of Upenn, which is a school with a very low acceptance rate.  </li>
+            <p>This website is about me and my high school journey. I come from an African background and I am Muslim. I've always been different but I've used my diversity to my advantage. Because of my outgoing personality, I lead alot of different community organizations. My favorite subjects have been math and econ, I want to study business in college. I want to eventually attend the Wharton School of Upenn, which is a school with a very low acceptance rate.  </li>
         <h3> My Accomplishments</h3>
             <p>I recently got accepted onto the Mayors Youth Leadership Council which I am very proud of, I am happy to be representing the youth of our district. I believe that the students should have a say in what happens because we are the ones mostly being influenced by all of the decisions made and such. It is important for the impowered youth so speak up against injustice.  </li>
-
-        <a href="https://github.com/RanyaAbedelmalik"
-           title="">Ranya's GitHub</a>.
-        </p>
+        <p>  <a href="https://github.com/RanyaAbedelmalik"
+            title="">Ranya's GitHub</a>.</p>
+            <p>Here's a link to
+                    <a href="http://127.0.0.1:5500/project.html"
+                       title="The best place to find more information about Mozilla's
+                              mission and how to contribute">My Projects!</a>
+                    </p>
+            <p>Here's a link to
+                    <a href="http://127.0.0.1:5500/Info.html"
+                       title="The best place to find more information about Mozilla's
+                              mission and how to contribute"> My Contact Info</a>.
