now we're done, maybe.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <p>  <a href="https://github.com/RanyaAbedelmalik"
             title="">Ranya's GitHub</a>.</p>
             <p>Here's a link to
-                    <a href="http://127.0.0.1:5500/project.html"
+                    <a href="project.html"
                        title="The best place to find more information about Mozilla's
                               mission and how to contribute">My Projects!</a>
                     </p>
             <p>Here's a link to
-                    <a href="http://127.0.0.1:5500/Info.html"
+                    <a href="Info.html"
                        title="The best place to find more information about Mozilla's
                               mission and how to contribute"> My Contact Info</a>.
