--- a/Info.html
+++ b/Info.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+        <p>
+                <a href="index.html"
+                   title="The best place to find more information about Mozilla's
+                          mission and how to contribute">My Projects!</a>
+                </p>
+        <p>
+                <a href="Info.html"
+                   title="The best place to find more information about Mozilla's
+                          mission and how to contribute"> My Contact Info</a>.
     <h1> Ranya's Contact Info</h1>
     <h2>Email</h2>
         <p> @ abedelmalik.ranya@gmail.com</p>
@@ -19,5 +28,4 @@
     <h2>Snapchat</h2>
         <p>@ ItsRanya</p>
     
-</body>
 </html>
