--- a/project.html
+++ b/project.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+        <p>
+                <a href="Index.html"
+                   title="The best place to find more information about Mozilla's
+                          mission and how to contribute">My Projects!</a>
+                </p>
+        <p>
+                <a href="Info.html"
+                   title="The best place to find more information about Mozilla's
+                          mission and how to contribute"> My Contact Info</a>.
     <h1>Ranya's Projects!</h1>
     <h2>
         Middle School
@@ -30,5 +39,4 @@
         <p> I planned a fundraiser that raised $200 for the food pantry. I also worked with the food pantry to help give back to people in need. </p>
         
 
-</body>
 </html>
