portfolio color trials

--- a/Info.html
+++ b/Info.html
@@ -27,5 +27,7 @@
         <p> @ Raaaaaanya_</p>
     <h2>Snapchat</h2>
         <p>@ ItsRanya</p>
+    <h2>Twitter</h2>
+        <p>@ RAbedelmalik</p>
     
 </html>
